# achew

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  dev.sh  docker-compose.yml  run.bat  run.sh  zensical.toml
backend/: pyproject.toml
backend/app/: __init__.py  app.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: audio.py  audiobookshelf.py  chapters.py  config.py  core.py  pipeline.py  references.py  sources.py
backend/app/core/: config.py  constants.py  migration.py  system_info.py
backend/app/models/: __init__.py  abs.py  ai_options.py  chapter.py  chapter_operation.py  enums.py  progress.py  references.py  sources.py  websocket.py
backend/app/services/: abs_service.py  asr_service.py  asr_service_options.py  audible_providers.py  audio_service.py  chapter_aligner.py  dramatized_detection.py  processing_pipeline.py  progress_dispatcher.py  smart_detection_service.py  vad_detection_service.py  vad_worker.py
backend/app/services/asr_providers/: __init__.py  parakeet_mlx_service.py  parakeet_service.py  whisper_cpp_service.py  whisper_mlx_service.py  whisper_service.py
backend/app/services/chapter_search/: database.py  search.py  state.py  stats.py  sync.py
backend/app/services/llm_providers/: __init__.py  base.py  claude_service.py  copilot_service.py  gemini_service.py  lm_studio_service.py  ollama_service.py  openai_compatible_service.py  openai_service.py  openrouter_service.py  registry.py
backend/app/services/reference_parsers/: __init__.py  base_parser.py  csv_parser.py  cue_parser.py  epub_parser.py  json_parser.py  mobi_parser.py  text_parser.py  title_utils.py
backend/app/services/source_parsers/: __init__.py  base_parser.py  csv_parser.py  cue_parser.py  epub_parser.py  json_parser.py  text_parser.py  timestamp_utils.py  title_utils.py
backend/scripts/: generate_notices.py
backend/tests/: conftest.py
backend/tests/dramatized/: test_dramatized_detection.py
backend/tests/dramatized/fixtures/: README.md  dramatized_fixture_03585fdf.json  dramatized_fixture_0596b77d.json  dramatized_fixture_10e2c7f7.json  dramatized_fixture_156252fc.json  dramatized_fixture_162b0619.json  dramatized_fixture_17bbff68.json  dramatized_fixture_20260613_225423.json  dramatized_fixture_20260613_225520.json  dramatized_fixture_20260613_225826.json  dramatized_fixture_20260614_144817.json  dramatized_fixture_20260614_144908.json  dramatized_fixture_20260614_145028.json  dramatized_fixture_20260614_145401.json  dramatized_fixture_20260614_145634.json  dramatized_fixture_20260614_145750.json  dramatized_fixture_20260614_145844.json  dramatized_fixture_20260614_145924.json  dramatized_fixture_20260615_190511.json  dramatized_fixture_20260615_191134.json  dramatized_fixture_20260615_191234.json  dramatized_fixture_20260615_191348.json  dramatized_fixture_20260615_191446.json  dramatized_fixture_20260615_191623.json  dramatized_fixture_20260615_191734.json  dramatized_fixture_20260615_191802.json  dramatized_fixture_20260615_191930.json  dramatized_fixture_20260615_192107.json  dramatized_fixture_20260615_192344.json  dramatized_fixture_20260615_192550.json  dramatized_fixture_20260615_192835.json  dramatized_fixture_20260615_193004.json  dramatized_fixture_20260615_193220.json  dramatized_fixture_20260615_194150.json  dramatized_fixture_20260615_194449.json  dramatized_fixture_20260615_194641.json  dramatized_fixture_20260615_194750.json  dramatized_fixture_20d2252f.json  dramatized_fixture_21ed765e.json  dramatized_fixture_220bdebb.json  (+61 more)
backend/tests/llm_providers/: test_lm_studio_service.py  test_ollama_service.py  test_openai_compatible_service.py  test_openrouter_service.py  test_registry.py
backend/tests/realignment/: realignment_baseline.json  realignment_helpers.py  test_chapter_aligner.py
backend/tests/realignment/fixtures/: README.md  realignment_fixture_20260604_211309.json  realignment_fixture_20260604_211456.json  realignment_fixture_20260604_211724.json  realignment_fixture_20260604_211909.json  realignment_fixture_20260604_212122.json  realignment_fixture_20260605_002825.json  realignment_fixture_20260605_003319.json  realignment_fixture_20260605_004044.json  realignment_fixture_20260605_230501.json  realignment_fixture_20260605_232233.json  realignment_fixture_20260606_161033.json  realignment_fixture_20260606_161321.json  realignment_fixture_20260606_161612.json  realignment_fixture_20260606_161843.json  realignment_fixture_20260606_162027.json  realignment_fixture_20260606_162405.json  realignment_fixture_20260606_162629.json  realignment_fixture_20260606_163031.json  realignment_fixture_20260606_163252.json  realignment_fixture_20260606_163837.json  realignment_fixture_20260606_164158.json  realignment_fixture_20260606_164455.json  realignment_fixture_20260606_164638.json  realignment_fixture_20260606_164920.json  realignment_fixture_20260606_170110.json  realignment_fixture_20260606_170350.json  realignment_fixture_20260606_171739.json  realignment_fixture_20260606_172004.json  realignment_fixture_20260606_172128.json  realignment_fixture_20260606_172340.json  realignment_fixture_20260606_172624.json  (+42 more)
backend/tests/reference_parsers/: test_epub_parser.py  test_mobi_parser.py
(+172 files in other folders)
