[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "achew"
version = "1.7.4"
description = "Audiobook Chapter Extraction Wizard"
license = {text = "MIT"}
authors = [
    {name = "Sir Gibblets"},
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "aiosqlite>=0.19.0",
    "rapidfuzz>=3.0.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=2.32.0",
    "numpy>=1.24.4",
    "onnx-asr[cpu,hub]>=0.11.0",
    "mlx-whisper>=0.4.3; sys_platform == 'darwin'",
    "parakeet-mlx>=0.5.1; sys_platform == 'darwin'",
    "ollama>=0.5.1",
    "google-genai[aiohttp]>=1.65.0",
    "anthropic>=0.76.0",
    "lmstudio==1.4.1",
    "pywhispercpp>=1.3.3",
    "github-copilot-sdk>=0.2.1",
    "ebooklib==0.20",
    "python-multipart==0.0.24",
    "langcodes[data]>=3.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Override the metadata of mlx-whisper to omit torch, which is not needed for our use case.
[[tool.uv.dependency-metadata]]
name = "mlx-whisper"
version = "0.4.3"
requires-dist = [
    "mlx>=0.11",
    "numba",
    "numpy",
    "tqdm",
    "more-itertools",
    "tiktoken",
    "huggingface_hub",
    "scipy",
]

[project.optional-dependencies]
dev = [
    # Development and testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",

    # Code formatting, linting, type checking
    "ruff>=0.15.0",
    "pyright>=1.1.400",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Logging must be configured before any module imports a logger, so imports cannot all be at top.
"app/main.py" = ["E402"]

[tool.pyright]
include = ["app"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportUnusedVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
